# sif-ai-form-service

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE_FLOW.md  Makefile  README.md  VERCEL_ENV_VARS.md  flow_planner.py  image_planner.py  pyproject.toml  requirements.txt  shared  sitecustomize.py  test_request.json  test_supabase.py  test_supabase.sh
.venv_sandbox/: pyvenv.cfg
api/: __init__.py  contract.py  http_logging.py  index.py  main.py  models.py  openapi_contract.py  request_adapter.py  supabase_client.py  utils.py
api-contract/: README.md  openapi.json
compile/: compile_next_steps.py
compiled/: next_steps_compiled.jsonl
docs/: DSPY_LAUNCHPAD.md  batch_generation_control_flow.md
eval/: __init__.py  datasets.py  eval_cases.jsonl  metrics.py  optimize.py  run_eval.py
examples/: FORM_PLAN_EXPLAINED.md  README.md  api_request_batch2.json  api_request_minimal.json  api_request_organized.json  api_request_structured.json  copy_examples.jsonl  form_planner_examples.jsonl  next_steps_examples.jsonl  next_steps_examples.optimized.jsonl  next_steps_structural.jsonl  registry.py  schema_examples.jsonl
modules/: __init__.py  batch_generator.py  flow_planner_module.py  image_prompt_module.py
planner_api/: __init__.py
scripts/: backfill_feedback_case_context.py  check_batchgen_examples.py  check_example_leaks.py  check_service_openapi_contract.py  eval_next_steps.py  export_contract.py  export_eval_cases_from_feedback.py  export_openapi_contract.py  generate_next_steps_demos.py  import_contract.py  leak_check.py  optimize_next_steps_demos.py  (+6 more)
(+247 files in other folders)
